--- a/Huffman/Huffman.vcxproj.filters
+++ b/Huffman/Huffman.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClCompile Include="HuffmanDecompress.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="CanonicalCode.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BitIOStream.h">
@@ -72,6 +75,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="HuffmanDecompress.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="CanonicalCode.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
