--- a/Huffman/Huffman.vcxproj.filters
+++ b/Huffman/Huffman.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClCompile Include="CanonicalCode.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="FastFstream.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BitIOStream.h">
@@ -78,6 +81,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="CanonicalCode.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="FastFstream.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
